--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,295 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .App {
+  padding: 1px;
+  margin: 5px;
+  font-family: "Gowun Batang", sans-serif;
+  font-size: 15;
+  display: flex;
+  justify-content: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Resume {
+  border: 3px solid black;
+  height: 940px;
+  width: 850px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.Header {
+  border: 1px solid #338078;
+  height: 120px;
+  background: #338078;
   color: white;
+  position: relative;
+  display: 'inline-block';
+  border: '2px solid #000';
+  padding: '10px';
 }
 
-.App-link {
-  color: #61dafb;
+.header-container {
+  margin-top: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.profile {
+  width: 100px;
+  height: 100px;
+  position: absolute;   
+  top: 0;
+  right: 0;
+  margin: 10px;
+  margin-right: 20px;
 }
+
+.Contact {
+  flex: 1;
+  background: #f7f7f7;
+  align-items: 'center';
+}
+
+.mail {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.email {
+  margin-left: 5px;
+}
+
+.mail-pic {
+  margin-left: 30px;
+}
+
+.num {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.phone-number {
+  margin-top: 10px;
+  margin-left: 5px;
+}
+
+.num-pic {
+  margin-left: 112px;
+  margin-top: 10px;
+}
+
+.loc {
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.location {
+  margin-right: 65px;
+  margin-left: 1px;
+  margin-top: 10px;
+}
+
+.loc-pic {
+  margin-right: 29px;
+}
+
+.fb {
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.facebook {
+  margin-left: 5px;
+}
+
+
+.facebook-pic {
+  margin-left: 160px;
+  margin-bottom: 3px;
+}
+
+.ghub {
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.github {
+  margin-left: 5px;
+  margin-top: 5px;
+}
+
+.github-pic {
+  margin-left: 178px;
+  margin-top: 5px;
+}
+
+.hr1 {
+  margin-top: 10px;
+}
+
+.educ {
+  text-align: left;
+  margin-left: 5px;
+  margin-top: 10px;
+}
+
+.hr2 {
+  margin-top: 10px;
+}
+
+.skill {
+  margin-top: 10px;
+  text-align: left;
+  margin-left: 5px;
+  font-family: "Gowun Batang", sans-serif;
+  font-style: normal;
+}
+
+.Content {
+  border: 1px solid black;
+  display: flex;
+  height: 815px;
+}
+
+.Experience {
+  flex: 2;
+}
+
+.sda {
+  margin-right: 270px;
+}
+
+.smart {
+  margin-right: 320px;
+}
+
+.smart-year {
+  margin-right: 245px;
+  margin-bottom: 5px;
+}
+
+.smart-exp1 {
+  display: list-item; 
+  text-align: left;
+  margin-left: 30px;
+  font-size: 14px;
+  }
+  
+.smart-exp2 {
+  display: list-item; 
+  text-align: left;
+  margin-left: 30px;
+  font-size: 14px;
+  }
+  
+.smart-exp3 {
+  display: list-item; 
+  text-align: left;
+  margin-left: 30px;
+  font-size: 14px;
+  }
+  
+.smart-exp4 {
+  display: list-item; 
+  text-align: left;
+  margin-left: 30px;
+  font-size: 14px;
+  } 
+
+.hr3 {
+  margin-top: 5px;
+}
+
+.jda {
+  margin-right: 270px;
+  margin-top: 5px;
+}
+
+.bpi {
+  margin-right: 423px;
+}
+
+.bpi-year {
+margin-right: 266px;
+margin-bottom: 5px;
+}
+
+.bpi-exp1 {
+display: list-item; 
+text-align: left;
+margin-left: 30px;
+font-size: 14px;
+}
+
+.bpi-exp2 {
+display: list-item; 
+text-align: left;
+margin-left: 30px;
+font-size: 14px;
+}
+
+.bpi-exp3 {
+display: list-item; 
+text-align: left;
+margin-left: 30px;
+font-size: 14px;
+}
+
+.bpi-exp4 {
+display: list-item; 
+text-align: left;
+margin-left: 30px;
+font-size: 14px;
+} 
+
+.hr4{
+  margin-top: 5px;
+}
+
+.fsd {
+  margin-right: 270px;
+  margin-top: 5px;
+}
+
+.fl {
+    margin-right: 425px;
+}
+
+.fl-year {
+  margin-right: 315px;
+  margin-bottom: 5px;
+}
+
+.fl-exp1 {
+  display: list-item; 
+  text-align: left;
+  margin-left: 30px;
+  font-size: 14px;
+} 
+
+.fl-exp2 {
+  display: list-item; 
+  text-align: left;
+  margin-left: 30px;
+  font-size: 14px;
+} 
+
+.fl-exp3 {
+  display: list-item; 
+  text-align: left;
+  margin-left: 30px;
+  font-size: 14px;
+} 
+
+.fl-exp4 {
+  display: list-item; 
+  text-align: left;
+  margin-left: 30px;
+  font-size: 14px;
+} 
